# trajix

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.claude/skills/nice-friend/: SKILL.md
.claude/skills/record-demo/: SKILL.md
.claude/skills/run-scenario/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  release.yml
cli/: Cargo.toml
crates/trajix/: Cargo.toml
crates/trajix-cli/: Cargo.toml
crates/trajix-cli/src/: main.rs
crates/trajix-core/: Cargo.toml
crates/trajix-core/src/: dead_reckoning.rs  downsample.rs  error.rs  lib.rs  summary.rs  types.rs
crates/trajix-wasm/: Cargo.toml
crates/trajix-wasm/src/: lib.rs
crates/trajix/src/: altitude.rs  coverage.rs  dead_reckoning.rs  downsample.rs  error.rs  geo.rs  lib.rs  pipeline.rs  quality.rs  stats.rs  types.rs
crates/trajix/src/parser/: filter.rs  line.rs  time_context.rs
crates/trajix/src/record/: fix.rs  mod.rs  raw.rs  sensor.rs  status.rs
crates/trajix/tests/fixtures/: fix_high_accuracy_error.txt  fix_mid_file.txt  fix_normal_flp.txt  fix_normal_gps.txt  status_multi_constellation.txt
scripts/: run-scenario.mjs
scripts/scenarios/: 2025-11-29-chitose-narita.mjs  2026-02-21-tsukuba.mjs
src/: anomaly.rs  dead_reckoning.rs  pipeline.rs  summary.rs
src/parser/: header.rs  streaming.rs  time_context.rs
src/record/: raw.rs
tests/fixtures/: header.txt  nlp_visual_test.txt  sensor_all_types.txt
wasm/: Cargo.toml
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
web/src/components/: FileLoader.tsx
web/src/hooks/: useAnimationTime.ts  useDuckDB.ts  useGnssData.test.ts  useGnssData.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts
web/src/layout/: playbackLayout.test.ts  playbackLayout.ts  sidebarState.test.ts  sidebarState.ts
web/src/types/: gnss.ts  trajix-wasm.d.ts
web/src/utils/: altitude.test.ts  (+19 more)
(+35 files in other folders)
