[package]
name = "trajix-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
trajix = { path = ".." }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
tsify-next = { version = "0.5", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
